updated data + R scripts

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -80,6 +80,16 @@
   url       = {https://cengage.com.au/product/title/a-glossary-of-literary-terms/isbn/9781285465067},
 }
 
+@Book{Abrams2001,
+  title     = {Studying Film},
+  publisher = {Oxford University Press},
+  year      = {2001},
+  author    = {Abrams, N. and Bell, I. and Udris, J.},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
+  url       = {https://books.google.fr/books/about/Studying_Film.html?id=RauhQgAACAAJ},
+}
+
 @InProceedings{Abu-Jbara2011,
   author    = {Abu-Jbara, A. and Radev, D.},
   title     = {Coherent citation-based summarization of scientific papers},
@@ -139,6 +149,33 @@
   doi       = {10.1109/mmul.2003.1195158},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Adams2005,
+  author    = {Adams, B. and Venketesh, S. and Bui, H. H. and Dorai, C.},
+  title     = {A Probabilistic Framework for Extracting Narrative Act Boundaries and Semantics in Motion Pictures},
+  journal   = {Multimedia Tools and Applications},
+  year      = {2005},
+  volume    = {27},
+  number    = {2},
+  pages     = {195-213},
+  doi       = {10.1007/s11042-005-2574-2},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+}
+
+@InCollection{Adams2018,
+  author    = {Adams, B. and Dorai, C. and Venkatesh, S.},
+  title     = {Formulating Film Tempo - The Computational Media Aesthetics Methodology in Practice},
+  booktitle = {Media Computing - Computational Media Aesthetics},
+  publisher = {Springer},
+  year      = {2018},
+  volume    = {4},
+  series    = {The Springer International Series in Video Computing},
+  pages     = {57-84},
+  doi       = {10.1007/978-1-4615-1119-9_4},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
 }
 
 @InProceedings{Agarwal2010,
@@ -2719,6 +2756,19 @@
   timestamp = {2017.12.06},
 }
 
+@Article{Bosch2008,
+  author    = {Bosch, A. and Zisserman, A. and Muñoz, X.},
+  title     = {Scene Classification Using a Hybrid Generative/Discriminative Approach},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year      = {2008},
+  volume    = {30},
+  number    = {4},
+  pages     = {712-727},
+  doi       = {10.1109/TPAMI.2007.70716},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
+}
+
 @Article{Bossaert2013,
   author    = {Bossaert, G. and Meidert, N.},
   title     = {"We Are Only as Strong as We Are United, as Weak as We Are Divided" a Dynamic Analysis of the Peer Support Networks in the {Harry Potter} Books},
@@ -4177,6 +4227,19 @@
   url       = {https://dl.acm.org/citation.cfm?id=1859723},
 }
 
+@InProceedings{Chen2011,
+  author    = {Chen, Q. and Shao, Y.},
+  title     = {A Hybrid Genetic Algorithm to Solve Zero-One Knapsack Problem},
+  booktitle = {International Conference on Applied Informatics and Communication},
+  year      = {2011},
+  volume    = {224},
+  series    = {Communications in Computer and Information Science},
+  pages     = {315-320},
+  doi       = {10.1007/978-3-642-23214-5_42},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
+}
+
 @Article{Chen2014d,
   author    = {Chen, M. and Kuzmin, K0 and Szymanski, B. K.},
   title     = {Community Detection via Maximization of Modularity and Its Variants},
@@ -4409,6 +4472,17 @@
   doi       = {10.1145/3078971.3079031},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@InProceedings{Chua2009,
+  author    = {Chua, T.-S. and Tang, S. and Trichet, R. and Tan, H. K. and Song, Y.},
+  title     = {MovieBase: a movie database for event detection and behavioral analysis},
+  booktitle = {1st workshop on Web-scale multimedia corpus},
+  year      = {2009},
+  pages     = {41-48},
+  doi       = {10.1145/1631135.1631143},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
 }
 
 @Article{Chui2003,
@@ -4754,6 +4828,19 @@
   doi       = {10.1145/1054972.1054985},
   owner     = {Vincent},
   timestamp = {2019.03.22},
+}
+
+@Article{Cooper2005,
+  author    = {Cooper, M. and Foote, J. and Girgensohn, A. Wilcox, L.},
+  title     = {Temporal event clustering for digital photo collections},
+  journal   = {ACM Transactions on Multimedia Computing, Communications, and Applications},
+  year      = {2005},
+  volume    = {1},
+  number    = {3},
+  pages     = {269-288},
+  doi       = {10.1145/1083314.1083317},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
 }
 
 @InProceedings{Corman2013,
@@ -6383,6 +6470,18 @@
   url       = {http://www.aclweb.org/anthology/E12-1065},
 }
 
+@Article{Elsner2015,
+  author    = {Elsner, M.},
+  title     = {Abstract Representations of Plot Structure},
+  journal   = {Linguistic Issues in Language Technology},
+  year      = {2015},
+  volume    = {12},
+  pages     = {5},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+  url       = {http://csli-lilt.stanford.edu/ojs/index.php/LiLT/article/view/57},
+}
+
 @InProceedings{Elson2009,
   author    = {Elson, D. K. and McKeown, K. R.},
   title     = {Extending and evaluating a platform for story understanding},
@@ -6552,6 +6651,19 @@
   doi       = {10.1109/icip.2008.4712308},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Evangelopoulos2013,
+  author    = {Evangelopoulos, G. and Zlatintsi, A. and Potamianos, A. and Maragos, P. and Rapantzikos, K. and Skoumas, G. and Avrithis, Y.},
+  title     = {Multimodal Saliency and Fusion for Movie Summarization Based on Aural, Visual, and Textual Attention},
+  journal   = {IEEE Transactions on Multimedia},
+  year      = {2013},
+  volume    = {15},
+  number    = {7},
+  pages     = {1553-1568},
+  doi       = {10.1109/TMM.2013.2267205},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
 }
 
 @InProceedings{Evans2000,
@@ -8643,7 +8755,7 @@
 
 @Article{Halkidi2002,
   author    = {Halkidi, M. and Batistakis, Y. and Vazirgiannis, M.},
-  title     = {Clustering validity checking methods},
+  title     = {Cluster validity checking methods: part II},
   journal   = {ACM SIGMOD Record},
   year      = {2002},
   volume    = {31},
@@ -8656,7 +8768,7 @@
 
 @Article{Halkidi2002a,
   author    = {Halkidi, M. and Batistakis, Y. and Vazirgiannis, M.},
-  title     = {Cluster validity methods},
+  title     = {Cluster validity checking methods: part I},
   journal   = {ACM SIGMOD Record},
   year      = {2002},
   volume    = {31},
@@ -8974,6 +9086,21 @@
   url       = {http://www.aclweb.org/anthology/P13-1129},
 }
 
+@InProceedings{He2018i,
+  author        = {He, J. and Xie, Y. and Luan, X. and Zhang, L. and Zhang, X.},
+  title         = {SRN: The Movie Character Relationship Analysis via Social Network},
+  booktitle     = {International Conference on Multimedia Modeling},
+  year          = {2018},
+  volume        = {10705},
+  series        = {Lecture Notes in Computer Science},
+  pages         = {289-301},
+  publisher     = {Springer},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1007/978-3-319-73600-6_25},
+  owner         = {Vincent},
+  timestamp     = {2019.06.27},
+}
+
 @Book{Heaney1999,
   title     = {Beowulf},
   publisher = {Faber and Faber},
@@ -9258,9 +9385,10 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @InProceedings{Ho2004,
   author    = {Ho, Y.-H. and Chen, W.-R. and Lin, C.-W.},
-  title     = {A rate-constrafned key-frame extraction scheme for channel-aware video streaming},
+  title     = {A rate-constrained key-frame extraction scheme for channel-aware video streaming},
   booktitle = {International Conference on Image Processing},
   year      = {2004},
+  pages     = {613-616},
   doi       = {10.1109/icip.2004.1418829},
   owner     = {Vincent},
   timestamp = {2019.03.27},
@@ -9312,6 +9440,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1177/0265407509105524},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Hofmann2001,
+  author    = {Hofmann, T.},
+  title     = {Unsupervised Learning by Probabilistic Latent Semantic Analysis},
+  journal   = {Machine Learning},
+  year      = {2001},
+  volume    = {42},
+  number    = {1-2},
+  pages     = {177},
+  doi       = {10.1023/A:1007617005950},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
 }
 
 @Article{Holanda2017,
@@ -9486,6 +9627,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1017/S0028688500014247},
   owner     = {Vincent},
   timestamp = {2019.06.24},
+}
+
+@Article{Hou2012,
+  author    = {Hou, X. and Harel, J. and Koch, C.},
+  title     = {Image Signature: Highlighting Sparse Salient Regions},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year      = {2012},
+  volume    = {34},
+  number    = {1},
+  pages     = {194-201},
+  doi       = {10.1109/TPAMI.2011.146},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
 }
 
 @Article{Houghton1999,
@@ -9756,6 +9910,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tmm.2010.2051871},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@InProceedings{Irie2010a,
+  author    = {Irie, G. and Satou, T. and Kojima, A. and Yamasaki, T. and Aizawa, K.},
+  title     = {Automatic trailer generation},
+  booktitle = {18th ACM international conference on Multimedia},
+  year      = {2010},
+  pages     = {839-842},
+  doi       = {10.1145/1873951.1874092},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
 }
 
 @InProceedings{Ishii2010,
@@ -10435,6 +10600,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2018.10.27},
   url       = {https://pure.knaw.nl/ws/files/481270/karsdorp_et_al2012b.pdf},
+}
+
+@InProceedings{Katti2011,
+  author    = {Katti, H. and Yadati, K. and Kankanhalli, M. and Tat-Seng, C.},
+  title     = {Affective Video Summarization and Story Board Generation Using Pupillary Dilation and Eye Gaze},
+  booktitle = {IEEE International Symposium on Multimedia},
+  year      = {2011},
+  pages     = {319-326},
+  doi       = {10.1109/ISM.2011.57},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
 }
 
 @Article{Kazantseva2010,
@@ -11596,6 +11772,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@InProceedings{Le2014,
+  author    = {Le, Q. V. and Mikolov, T.},
+  title     = {Distributed Representations of Sentences and Documents},
+  booktitle = {31th International Conference on Machine Learning},
+  year      = {2014},
+  volume    = {32},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {1188-1196},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+  url       = {http://proceedings.mlr.press/v32/le14.html},
+}
+
 @InProceedings{Le2015,
   author    = {Le, T.-N. and Luqman, M. M. and Burie, J.-C. and Ogier, J.-M.},
   title     = {A Comic Retrieval System Based on Multilayer Graph Representation and Graph Mining},
@@ -11738,6 +11927,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://brill.com/view/book/edcoll/9789004334236/B9789004334236-s021.xml},
 }
 
+@InProceedings{Lee2001a,
+  author    = {Lee, C.-H. and Lin, C.-R. and Chen, M.-S.},
+  title     = {Sliding-window filtering: an efficient algorithm for incremental mining},
+  booktitle = {10th international conference on Information and knowledge management},
+  year      = {2001},
+  pages     = {263-270},
+  doi       = {10.1145/502585.502630},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
+}
+
 @InProceedings{Lee2002,
   author    = {Lee, Y.-B. and Myaeng, S. H.},
   title     = {Text genre classification with genre-revealing and subject-revealing features},
@@ -11849,6 +12049,30 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://ceur-ws.org/Vol-1794/afcai16-paper3.pdf},
 }
 
+@Article{Lee2017,
+  author    = {Lee, O-J. and Nguyen, H. L. and Jung, J. E. and Um, T.-W. and Lee, H.-W.},
+  title     = {Towards Ontological Approach on Trust-Aware Ambient Services},
+  journal   = {IEEE Access},
+  year      = {2017},
+  volume    = {5},
+  pages     = {1589-1599},
+  doi       = {10.1109/ACCESS.2017.2663407},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+}
+
+@Article{Lee2017a,
+  author    = {Lee, O-J. and Jung, J. E.},
+  title     = {Sequence Clustering-based Automated Rule Generation for Adaptive Complex Event Processing},
+  journal   = {Future Generation Computer Systems},
+  year      = {2017},
+  volume    = {66},
+  pages     = {100-109},
+  doi       = {10.1016/j.future.2016.02.011},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+}
+
 @Article{Lee2018,
   author    = {Lee, O.-J. and Jung, J. J.},
   title     = {Modeling affective character network for story analytics},
@@ -11861,6 +12085,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.02.21},
 }
 
+@InProceedings{Lee2018a,
+  author    = {Lee, O-J. and Jo, N. and Jung, J. J.},
+  title     = {Measuring Character-based Story Similarity by Analyzing Movie Scripts},
+  booktitle = {1stWorkshop on Narrative Extraction From Text / 40th European Conference on Information Retrieval},
+  year      = {2018},
+  volume    = {2077},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {41-45},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+  url       = {http://ceur-ws.org/Vol-2077/paper5.pdf},
+}
+
+@InProceedings{Lee2018b,
+  author    = {Lee, O-J. and Jung, J. J.},
+  title     = {Explainable Movie Recommendation Systems by using Story-based Similarity},
+  booktitle = {ACM IUI Workshops / 23rd ACM Conference on Intelligent User Interfaces},
+  year      = {2018},
+  volume    = {2068},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {5},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+  url       = {http://ceur-ws.org/Vol-2068/exss5.pdf},
+}
+
 @InProceedings{Lee2019b,
   author    = {Lee, O-J. and Jung, J. J.},
   title     = {Character Network Embedding-based Plot Structure Discovery in Narrative Multimedia},
@@ -11871,6 +12121,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {Character Nets},
   owner     = {Vincent},
   timestamp = {2019.05.23},
+}
+
+@Article{Lee2019c,
+  author    = {Lee, O-J. and Jung, J. J.},
+  title     = {Integrating character networks for extracting narratives from multimodal data},
+  journal   = {Information Processing \& Management},
+  year      = {2019},
+  volume    = {56},
+  number    = {5},
+  pages     = {1894-1923},
+  doi       = {10.1016/j.ipm.2019.02.005},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
 }
 
 @Book{Leggatt2005,
@@ -12133,6 +12396,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.13},
 }
 
+@InProceedings{Li2015b,
+  author    = {Li, Y. and Yang, X. and Luo, J.},
+  title     = {Semantic Video Entity Linking Based on Visual Content and Metadata},
+  booktitle = {IEEE International Conference on Computer Vision},
+  year      = {2015},
+  pages     = {4615-4623},
+  doi       = {10.1109/ICCV.2015.524},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+}
+
 @Article{Li2015o,
   author    = {Li, Z. X. and He, L. L. and Li, Y. R.},
   title     = {A novel multiobjective particle swarm optimization algorithm for signed network community detection},
@@ -12144,6 +12418,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s10489-015-0716-4},
   owner     = {Vincent},
   timestamp = {2015.10.31},
+}
+
+@InProceedings{Li2015w,
+  author    = {Li, J.-Y. and Kang, L.-W. and Tsai, C.-M. and Lin, C.-W.},
+  title     = {Learning-based movie summarization via role-community analysis and feature fusion},
+  booktitle = {17th IEEE International Workshop on Multimedia Signal Processing},
+  year      = {2015},
+  doi       = {10.1109/MMSP.2015.7340794},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
 }
 
 @InProceedings{Li2017,
@@ -12488,6 +12772,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/nar/gkx485},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@Article{Liu2017a,
+  author    = {Liu, X. and Kan, M. and Wu, W. and Shan, S. and Chen, X.},
+  title     = {VIPLFaceNet: an open source deep face recognition SDK},
+  journal   = {Frontiers of Computer Science},
+  year      = {2017},
+  volume    = {11},
+  number    = {2},
+  pages     = {208-218},
+  doi       = {10.1007/s11704-016-6076-3},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
 }
 
 @Article{Liu2017d,
@@ -13590,7 +13887,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Book{McKee1997,
-  title     = {Substance, Structure, Style, and the Principles of Screenwriting},
+  title     = {Story: Substance, Structure, Style, and the Principles of Screenwriting},
   publisher = {Harper Collins},
   year      = {1997},
   author    = {McKee, R.},
@@ -13927,6 +14224,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.17210/hcik.2016.01.100},
   owner     = {Vincent},
   timestamp = {2016.07.06},
+}
+
+@Article{Minami1998,
+  author    = {Minami, K. and Akutsu, A. and Hamada, H. and Tonomura, Y.},
+  title     = {Video handling with music and speech detection},
+  journal   = {IEEE Multimedia},
+  year      = {1998},
+  volume    = {5},
+  number    = {3},
+  pages     = {17-25},
+  doi       = {10.1109/93.713301},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
 }
 
 @TechReport{Minka2000,
@@ -14657,6 +14967,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.04.25},
 }
 
+@Article{Naim2016,
+  author    = {Naim, I. and Al Mamun, A. and Song, Y. C. and Luo, J. and Kautz, H. and Gildea, D.},
+  title     = {Aligning movies with scripts by exploiting temporal ordering constraints},
+  journal   = {23rd International Conference on Pattern Recognition},
+  year      = {2016},
+  pages     = {1786-1791},
+  doi       = {10.1109/ICPR.2016.7899895},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+}
+
 @InProceedings{Nalisnick2013,
   author    = {Nalisnick, E. T. and Baird, H. S.},
   title     = {Character-to-Character Sentiment Analysis in {Shakespeare}'s Plays},
@@ -14746,6 +15067,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2013.02.19},
   url       = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6460321},
+}
+
+@InProceedings{Narayanan2016,
+  author    = {Narayanan, A. and Chandramohan, M. and Chen, L. and Liu, Y. and Saminathan, S.},
+  title     = {{subgraph2vec}: Learning Distributed Representations of Rooted Sub-graphs from Large Graphs},
+  booktitle = {12th International Workshop on Mining and Learning with Graphs},
+  year      = {2016},
+  pages     = {26},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+  url       = {http://www.mlgworkshop.org/2016/paper/MLG2016_paper_26.pdf},
+}
+
+@InProceedings{Narayanan2017,
+  author    = {Narayanan, A. and Chandramohan, M. and Venkatesan, R. and Chen, L. and Liu, Y. and Jaiswal, S.},
+  title     = {{graph2vec}: Learning Distributed Representations of Graphs},
+  booktitle = {13th International Workshop on Mining and Learning with Graphs},
+  year      = {2017},
+  pages     = {21},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+  url       = {http://www.mlgworkshop.org/2016/paper/MLG2016_paper_26.pdf},
 }
 
 @Article{Nash1950,
@@ -15114,6 +15457,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2661829.2661918},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@Article{Nguyen2017,
+  author    = {Nguyen, H. L. and Lee, O-J. and Jung, J. E. and Park, J. and Um, T.-W. and Lee, H.-W.},
+  title     = {Event-Driven Trust Refreshment on Ambient Services},
+  journal   = {IEEE Access},
+  year      = {2017},
+  volume    = {5},
+  pages     = {4664-4670},
+  doi       = {10.1109/ACCESS.2017.2677917},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
 }
 
 @InProceedings{Nguyen2017a,
@@ -15894,6 +16249,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.04.27},
 }
 
+@InProceedings{Park2010,
+  author    = {Park, S.-B. and Kim, H.-N. and Kim, H. and Jo, G.-S.},
+  title     = {Exploiting Script-Subtitles Alignment to Scene Boundary Dectection in Movie},
+  booktitle = {IEEE International Symposium on Multimedia},
+  year      = {2010},
+  pages     = {49-56},
+  doi       = {10.1109/ISM.2010.17},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+}
+
 @Article{Park2011,
   author    = {Park, S.-B. and Oh, K.-J. and Jo, G.-S.},
   title     = {Social network analysis in a movie using {Character-Net}},
@@ -15958,6 +16324,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.jcomputers.us/vol8/jcp0809-38.pdf},
 }
 
+@Article{Park2014,
+  author    = {Park, S.-B. and Lee, J.-D. and You, E. and Lee, D.},
+  title     = {Movie browsing system based on character and emotion},
+  journal   = {Multimedia Tools and Applications},
+  year      = {2014},
+  volume    = {68},
+  number    = {2},
+  pages     = {391-400},
+  doi       = {10.1007/s11042-012-1320-9},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+}
+
 @Article{Park2015,
   author    = {Park, D. and Bae, A. and Schich, M. and Park, J.},
   title     = {Topology and evolution of the network of western classical music composers},
@@ -15991,6 +16370,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1006/jvlc.1998.0086},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@InCollection{Parker2011,
+  author    = {Parker, M. and Parker, D.},
+  title     = {Directors and DVD Commentary: The Specifics of Intention},
+  booktitle = {The DVD and the Study of Film},
+  publisher = {Springer},
+  year      = {2011},
+  pages     = {73-96},
+  doi       = {10.1007/978-0-230-11913-0_4},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
 }
 
 @Book{Partridge1971,
@@ -16321,6 +16712,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://txtlab.org/?p=611]},
 }
 
+@Article{Pisinger1995,
+  author    = {Pisinger, D.},
+  title     = {An expanding-core algorithm for the exact 0–1 knapsack problem},
+  journal   = {European Journal of Operational Research},
+  year      = {1995},
+  volume    = {87},
+  number    = {1},
+  pages     = {175-187},
+  doi       = {10.1016/0377-2217(94)00013-3},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
+}
+
 @InProceedings{Plaisant2006,
   author    = {Plaisant, C. and Rose, J. and Yu, B. and Auvil, L. and Kirschenbaum, M. G. and Nell Smith, M. and Clement, T. and Lord, G.},
   title     = {Exploring erotics in Emily Dickinson's correspondence with text mining and visual interfaces},
@@ -16470,6 +16874,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://dl.acm.org/citation.cfm?id=2002782},
+}
+
+@InProceedings{Potapov2014,
+  author    = {Potapov, D. and Douze, M. and Harchaoui, Z. and Schmid, C.},
+  title     = {Category-Specific Video Summarization},
+  booktitle = {European Conference on Computer Vision},
+  year      = {2014},
+  volume    = {8694},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {540-555},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-319-10599-4_35},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
 }
 
 @InProceedings{Poudat2003,
@@ -18643,6 +19061,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://proceedings.mlr.press/v5/shervashidze09a.html},
 }
 
+@Article{Shervashidze2011,
+  author    = {Shervashidze, N. and Schweitzer, P. and van Leeuwen, E. J. and Mehlhorn, K. and Borgwardt, K. M.},
+  title     = {Weisfeiler-Lehman Graph Kernels},
+  journal   = {Journal of Machine Learning Research},
+  year      = {2011},
+  volume    = {12},
+  pages     = {2539-2561},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+  url       = {https://dl.acm.org/citation.cfm?id=2078187},
+}
+
 @Article{Shimbel1953,
   author    = {Shimbel, A.},
   title     = {Structural parameters of communication networks},
@@ -19817,6 +20247,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@Article{Taskiran2006a,
+  author    = {Taskiran, C. M. and Pizlo, Z. and Amir, A. and Ponceleon, D. and Delp, E. J.},
+  title     = {Automated video program summarization using speech transcripts},
+  journal   = {IEEE Transactions on Multimedia},
+  year      = {2006},
+  volume    = {8},
+  number    = {4},
+  pages     = {775-791},
+  doi       = {10.1109/TMM.2006.876282},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
+}
+
 @Article{Tausczik2009,
   author    = {Tausczik, Y. R. and Pennebaker, J. W.},
   title     = {The Psychological Meaning of Words: {LIWC} and Computerized Text Analysis Methods},
@@ -19879,6 +20322,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1371/journal.pone.0078871},
   owner     = {Vincent},
   timestamp = {2019.04.02},
+}
+
+@InProceedings{Teixeira2008,
+  author    = {Teixeira, C. and Respício, A.},
+  title     = {Representing and playing user selected video narrative domains},
+  booktitle = {2nd ACM international workshop on Story representation, mechanism and context},
+  year      = {2008},
+  pages     = {33-40},
+  doi       = {10.1145/1462014.1462022},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
 }
 
 @Article{Telesford2011,
@@ -20000,6 +20454,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1367497.1367513},
   owner     = {Vincent},
   timestamp = {2019.03.29},
+}
+
+@Article{Tjondronegoro2004,
+  author    = {Tjondronegoro, D. and Chen, Y.-P. P. Pham, B.},
+  title     = {Integrating Highlights for More Complete Sports Video Summarization},
+  journal   = {IEEE MultiMedia},
+  year      = {2004},
+  volume    = {11},
+  number    = {4},
+  pages     = {22-37},
+  doi       = {10.1109/MMUL.2004.28},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
 }
 
 @InProceedings{TjongKimSang2003,
@@ -20273,7 +20740,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Book{Truby2007,
-  title     = {The Anatomy of Story},
+  title     = {The Anatomy of Story: 22 steps to becoming a master storyteller},
   publisher = {Faber and Faber},
   year      = {2007},
   author    = {Truby, J.},
@@ -20293,6 +20760,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1198302.1198305},
   owner     = {Vincent},
   timestamp = {2019.03.28},
+}
+
+@InProceedings{Tsai2011,
+  author    = {Tsai, T.-H. and Cheng, W.-H. and Hsieh, Y.-H.},
+  title     = {Dynamic social network for narrative video analysis},
+  booktitle = {19th ACM international conference on Multimedia},
+  year      = {2011},
+  pages     = {663-666},
+  doi       = {10.1145/2072298.2072413},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
 }
 
 @Article{Tsai2013,
@@ -20748,6 +21226,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.28},
 }
 
+@InProceedings{Viola2001,
+  author    = {Viola, P. and Jones, M.},
+  title     = {Rapid object detection using a boosted cascade of simple features},
+  booktitle = {IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
+  year      = {2001},
+  pages     = {511-518},
+  doi       = {10.1109/CVPR.2001.990517},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+}
+
 @Article{Viola2004,
   author    = {Viola, P. and Jones, M. J.},
   title     = {Robust Real-Time Face Detection},
@@ -20792,6 +21281,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://books.google.fr/books/about/Morphology_of_the_Folktale.html?id=3Md3u9UPgOEC&redir_esc=y},
+}
+
+@Book{Vogler1998,
+  title     = {The Writer's Journey: Mythic Structure for Writers},
+  publisher = {Michael Wiese Productions},
+  year      = {1998},
+  author    = {Vogler, C.},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
+  url       = {https://en.wikipedia.org/wiki/The_Writer%27s_Journey:_Mythic_Structure_for_Writers},
 }
 
 @Book{Vogler2007,
@@ -21807,6 +22306,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2011.07.19},
 }
 
+@InProceedings{Xiao2010,
+  author    = {Xiao, X. and Xu, C. and Rui, Y.},
+  title     = {Video based 3D reconstruction using spatio-temporal attention analysis},
+  booktitle = {IEEE International Conference on Multimedia and Expo},
+  year      = {2010},
+  pages     = {1091-1096},
+  doi       = {10.1109/ICME.2010.5582982},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
+}
+
 @Article{XiweiTang2014,
   author    = {Tang, X. and Wang, J. and Zhong, J. and Pan, Y.},
   title     = {Predicting Essential Proteins Based on Weighted Degree Centrality},
@@ -21872,6 +22382,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.sigpro.2012.06.026},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Xuan2014,
+  author    = {Xuan, H. P. and Jung, J. J. and Le, A. V. and Park, S.-B.},
+  title     = {Exploiting social contexts for movie recommendation},
+  journal   = {Malaysian Journal of Computer Science},
+  year      = {2014},
+  volume    = {27},
+  number    = {1},
+  pages     = {68-79},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
+  url       = {http://ajba.um.edu.my/index.php/MJCS/article/view/6794},
 }
 
 @Article{XUE2005,
@@ -22316,6 +22839,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.30},
 }
 
+@InProceedings{Zhai2005,
+  author    = {Zhai, Y. and Shah, M.},
+  title     = {Automatic Segmentation of Home Videos},
+  booktitle = {IEEE International Conference on Multimedia and Expo},
+  year      = {2005},
+  doi       = {10.1109/ICME.2005.1521347},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
+}
+
 @InProceedings{Zhang1995,
   author    = {Zhang, H. J. and Low, C. Y. and Smoliar, S. W. and Wu, J. H.},
   title     = {Video parsing, retrieval and browsing: an integrated and content-based solution},
@@ -22529,6 +23062,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2016.09.27},
 }
 
+@InProceedings{Zhu2003,
+  author    = {Zhu, X. and Wu, X.},
+  title     = {Sequential association mining for video summarization},
+  booktitle = {International Conference on Multimedia and Expo},
+  year      = {2003},
+  pages     = {333-336},
+  doi       = {10.1109/ICME.2003.1221316},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
+}
+
 @Article{Zhu2004,
   author    = {Zhu, X. and Wu, X. and Fan, J. and Elmagarmid, A. K. and Aref, W. G.},
   title     = {Exploring video content structure for hierarchical summarization},
@@ -22553,6 +23097,30 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tmm.2005.850977},
   owner     = {Vincent},
   timestamp = {2019.03.28},
+}
+
+@Article{Zhu2012,
+  author    = {Zhu, S. and Zhao, Y. and Liang, Z. and Jing, X.},
+  title     = {Movie abstraction via the progress of the storyline},
+  journal   = {IET Signal Processing},
+  year      = {2012},
+  volume    = {6},
+  number    = {8},
+  pages     = {751-762},
+  doi       = {10.1049/iet-spr.2011.0182},
+  owner     = {Vincent},
+  timestamp = {2019.06.28},
+}
+
+@InProceedings{Zhu2015,
+  author    = {Zhu, Y. and Kiros, R. and Zemel, R. and Salakhutdinov, R. and Urtasun, R. and Torralba, A. and Fidler, S.},
+  title     = {Aligning Books and Movies: Towards Story-Like Visual Explanations by Watching Movies and Reading Books},
+  booktitle = {IEEE International Conference on Computer Vision},
+  year      = {2015},
+  pages     = {19-27},
+  doi       = {10.1109/ICCV.2015.11},
+  owner     = {Vincent},
+  timestamp = {2019.06.27},
 }
 
 @Article{Zupan2015,
