--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -871,6 +871,18 @@
   url       = {https://dl.acm.org/citation.cfm?id=2390991},
 }
 
+@Article{Angraal2018,
+  author    = {Angraal, S. and Bhatnagar, A. and Verma, S. and Shergill, S. and Gupta, A. and Khera, R.},
+  title     = {Risk Factors Associated with Mortality in Game of Thrones: A Longitudinal Cohort Study},
+  journal   = {arXiv},
+  year      = {2018},
+  volume    = {stat.OT},
+  pages     = {1802.04161},
+  owner     = {Vincent},
+  timestamp = {2019.07.02},
+  url       = {https://arxiv.org/abs/1802.04161},
+}
+
 @Article{Anheier1995,
   author    = {Anheier, H. K. and Gerhards, J. and Romo, F. P.},
   title     = {Forms of capital and social structure in cultural fields: Examining Bourdieu's social topography},
@@ -4946,6 +4958,19 @@
   doi       = {10.1109/cvpr.2010.5540106},
   owner     = {Vincent},
   timestamp = {2019.03.29},
+}
+
+@Article{Cox1972,
+  author    = {Cox, D. R.},
+  title     = {Regression Models and Life-Tables},
+  journal   = {Journal of the Royal Statistical Society Series B},
+  year      = {1972},
+  volume    = {34},
+  number    = {2},
+  pages     = {187-220},
+  owner     = {Vincent},
+  timestamp = {2019.07.02},
+  url       = {https://www.jstor.org/stable/2985181},
 }
 
 @Article{Crane2006,
@@ -12542,6 +12567,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@Article{Liben-Nowell2007,
+  author    = {Liben-Nowell, D. and Kleinberg, J.},
+  title     = {The link-prediction problem for social networks},
+  journal   = {Journal of the American Society for Information Science and Technology},
+  year      = {2007},
+  volume    = {58},
+  number    = {7},
+  pages     = {1019-1031},
+  doi       = {10.1002/asi.20591},
+  owner     = {Vincent},
+  timestamp = {2010.10.11},
+}
+
 @Article{Lienhart1997,
   author    = {Lienhart, R. and Pfeiffer, S. and Effelsberg, W.},
   title     = {Video abstracting},
@@ -12589,6 +12627,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1038/35082140},
   owner     = {Vincent},
   timestamp = {2019.03.26},
+}
+
+@InProceedings{Lillo2014,
+  author    = {Lillo, Ivan and Soto, Alvaro and Niebles, Juan Carlos},
+  title     = {Discriminative Hierarchical Modeling of Spatio-temporally Composable Human Activities},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2014},
+  pages     = {812-819},
+  doi       = {10.1109/CVPR.2014.109},
+  owner     = {Vincent},
+  timestamp = {2019.07.01},
 }
 
 @Article{LimaeSilva2004,
@@ -19644,6 +19693,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1109.2475},
 }
 
+@Article{Stavanja2019,
+  author    = {Stavanja, J. and Klemen, M.},
+  title     = {Predicting kills in Game of Thrones using network properties},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {cs.SI},
+  pages     = {1906.09468},
+  owner     = {Vincent},
+  timestamp = {2019.07.01},
+  url       = {https://arxiv.org/abs/1906.09468},
+}
+
 @Article{Steglich2010,
   author    = {Steglich, C. and Snijders, T. A. B. and Pearson, M.},
   title     = {Dynamic Networks and Behavior: Separating Selection from Influence},
@@ -20579,6 +20640,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1163/15685314-04305005},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Traag2018a,
+  author        = {Traag, V. and Waltman, L. and van Eck, N. J.},
+  title         = {From Louvain to Leiden: guaranteeing well-connected communities},
+  journal       = {Scientific Reports},
+  year          = {2019},
+  volume        = {9},
+  pages         = {5233},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1038/s41598-019-41695-z},
+  owner         = {Vincent},
+  timestamp     = {2018.10.22},
 }
 
 @Article{Trabasso1985,
